# discord_data_package

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: main.rs  plot.rs  schema.rs
