[package]
name = "discord_data_package"
version = "0.1.0"
authors = ["witchof0x20 <jade@witchof.space>"]
edition = "2021"
description = "Utility for extracting info from discord data checkouts"
readme = "README.md"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", default-features = false, features = ["std", "alloc"] }
clap = { version = "4.5.2", features = ["derive"] }
plotters = "0.3.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
